# yata

./: .gitignore  App.axaml  App.axaml.cs  BUILD.md  CHANGELOG.md  LICENSE  Program.cs  README.md  ViewLocator.cs  Yata.csproj  app.manifest  build.sh  cresume  install-desktop.sh  pyproject.toml  run.sh
ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
Views/: MainWindow.axaml  MainWindow.axaml.cs
doc/: descr.md
docs/: instructions.md
resources/: yata.desktop
tests/: conftest.py  test_desktop_integration.py  test_focus_behavior.py  test_mock_fixture.py  test_models.py  test_qml_integration.py  test_settings.py  test_storage.py  test_x11_stacking.py
tests/fixtures/: mock_tasks.json  mock_tasks_timestamps.json
yata-src/: icons.py  main.py  models.py  resources.qrc  resources_rc.py  settings.py  storage.py  x11_stacking.py
yata-src/qml/: CalendarCell.qml  FilterBar.qml  FilterButton.qml  IconIndicator.qml  Main.qml  MonthView.qml  PagerArrow.qml  TaskDelegate.qml  Theme.qml  ThemeMenu.qml  Toolbar.qml  YearView.qml  qmldir
