[project]
name = "yata"
version = "0.12.4"
description = "Yet Another Todo Application"
requires-python = ">=3.10"
dependencies = [
    "pyside6>=6.7",
    "python-xlib>=0.33",
]

[dependency-groups]
build = [
    "nuitka>=4.1.3",
    "patchelf>=0.17.2.4",
]
dev = [
    "pytest>=8.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
